# avs-value-story

./: ARCHITECTURE.md  Guide-Private-VS-Repo.md  Guide-Visual-Studio-Code-Setup.md  Guild-Local-First-Privacy-with-OneDrive.md  README.md  Value-Story-YAML-Template.yaml  pyproject.toml  vs-000-template.md  vs-000-template.yaml
docs/: Guide-Private-VS-Repo.md  Guide-Setup-for-Non-Developers.md  Guide-Visual-Studio-Code-Setup.md
illustrative-example/: InnovateCorp_Senior-Product-Manager-AI-Solutions_Audit-Report-and-Final-Resume.md  InnovateCorp_Senior-Product-Manager-AI-Solutions_Strategic-Plan.md  README.md  VS-001-assembled.yaml  VS-001-logic-analysis.md  VS-001_output.md  VS-002-assembled.yaml  VS-002-logic-generation.md  VS-002_output.md  VS-003-assembled.yaml  VS-003-logic-audit.md  VS-003_output.md  assemble_prompt.py
src/avs_toolkit/: github_mcp.py  main.py  models.py  parser.py  runner.py
value-story-example/: create-vs.md
